// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a basic button 1`] = `
<button
  class="c-dTdqlH c-dTdqlH-kxlbib-variant-primary"
>
  Test
</button>
`;

exports[`Button renders a button with a startIcon 1`] = `
<button
  class="c-dTdqlH c-dTdqlH-kxlbib-variant-primary"
>
  <div
    class="c-dhzjXW c-dhzjXW-jroWjL-alignItems-center c-dhzjXW-ejCoEP-direction-row c-dhzjXW-bXfaDp-gap-1 c-dhzjXW-kVNAnR-wrap-nowrap c-dhzjXW-iAVZzu-css"
  >
    <svg
      data-testid="icon"
    />
  </div>
  Test
</button>
`;

exports[`Button renders a button with an endIcon 1`] = `
<button
  class="c-dTdqlH c-dTdqlH-kxlbib-variant-primary"
>
  Test
  <div
    class="c-dhzjXW c-dhzjXW-jroWjL-alignItems-center c-dhzjXW-ejCoEP-direction-row c-dhzjXW-bXfaDp-gap-1 c-dhzjXW-kVNAnR-wrap-nowrap c-dhzjXW-ikFADUB-css"
  >
    <svg
      data-testid="icon"
    />
  </div>
</button>
`;

exports[`Button renders an icon button 1`] = `
<button
  class="c-bhXMVC"
  variant="icon"
>
  <div
    class="c-dhzjXW c-dhzjXW-jroWjL-alignItems-center c-dhzjXW-ejCoEP-direction-row c-dhzjXW-bXfaDp-gap-1 c-dhzjXW-kVNAnR-wrap-nowrap c-dhzjXW-ijVLVTy-css"
  >
    <svg
      data-testid="icon"
    />
  </div>
</button>
`;
